Edit home page link

--- a/recipes/peach_spoon_cake.html
+++ b/recipes/peach_spoon_cake.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Peach Spoon Cake</h1>
-        <h1><a href="recipes/index.html">Home</a></h1>
+        <h1><a href="../index.html">Home</a></h1>
     </header>
     <main>
         <section>
